modified README and index

--- a/sass-proj/index.html
+++ b/sass-proj/index.html
@@ -16,7 +16,8 @@
                     <li class="name">Naily Nevarez</li>
                     <li class="email">me@email.com</li>
                     <li class="phone">(503)555-5555</li>
-                    <li class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor neque, eleifend at pellentesque quis, convallis sit amet tellus. Etiam et auctor arcu.</li>
+                    <br>
+                    <li class="desc">Feel free to contact me using any of the social media accounts below. </li>
                 </ul>
             </div>
         </section>
