--- a/app/Books/client/index.html
+++ b/app/Books/client/index.html
@@ -26,7 +26,7 @@
         </section>
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    
+    <script src="javascripts/books-app.js"></script>
 </body>
 
 </html>
