Finish add-book and confirm-add

--- a/app/Books/client/confirm-add.html
+++ b/app/Books/client/confirm-add.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/link-button.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/link-button.css">
 </head>
 
 <body>
@@ -16,18 +16,17 @@
                 <ul>
                     <li class="name"><b>Books R Us</b></li>
                     <br>
-                    <li class="desc">This page lists the books in your database.</li>
+                    <li class="desc">Your title was successfully added.</li>
                 </ul>
             </div>
             <br><br><br><br><br>
-             <nav>
-                <span class = "link_button"><a href="index.html"> Home </a></span>
-                <span class = "link_button"><a href="add-book.html"> Add Book</a></span>
-            </nav>
+              <nav>
+            <span class="link_button"><a href="index.html"> Home </a></span>
+            <span class="link_button"><a href="add-book.html">Add Book</a></span>
+        </nav>
         </section>
         <section class="social cf">
             <main>
-                <div class="photos"></div>
             </main>
         </section>
     </div>
