--- a/app/Books/client/add-book.html
+++ b/app/Books/client/add-book.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/link-button.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/forms.css">
 </head>
 
 <body>
@@ -27,20 +28,20 @@
         </section>
         <section class="social cf">
             <main>
-                <form action="/add-book" method="Post">
+                <form action="/add-book" method="Post" class="form">
                     <p>
                         Title:
-                        <input name="title">
+                        <input name="title" class ="box">
                     </p>
                     <p>
                         Author:
-                        <input name="author">
+                        <input name="author" class ="box">
                     </p>
                     <p>
                         Category:
-                        <input name="category">
+                        <input name="category" class ="box">
                     </p>
-                    <input type="submit" value="Submit Book">
+                    <input type="submit" value="Submit Book" class ="submit">
                 </form>
             </main>
         </section>
