--- a/app/ToDo/client/index.html
+++ b/app/ToDo/client/index.html
@@ -18,8 +18,7 @@
         <p>Add an item to the list:</p>
         <input type="text" name="content"><button type= "submit">+</button>
       </section>
-    <h2>2Do List</h2>
-    <br>
+    <h2><u>2Do List</u></h2>
     <br>
       <section class='comments'>
         
